--- a/aoc-solutions/Cargo.toml
+++ b/aoc-solutions/Cargo.toml
@@ -18,6 +18,10 @@ cgmath = "0.18"
 [dev-dependencies]
 criterion = { version = "0.3", features = ["real_blackbox"] }
 indoc = "1"
+paste = "1"
+
+[build-dependencies]
+indoc = "1"
 
 [lib]
 bench = false
