--- a/aoc-solutions/Cargo.toml
+++ b/aoc-solutions/Cargo.toml
@@ -14,14 +14,12 @@ validator = { version = "0.14", features = ["derive"] }
 itertools = "0.10"
 ndarray = "0.15"
 cgmath = "0.18"
+paste = "1"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["real_blackbox"] }
 indoc = "1"
 paste = "1"
-
-[build-dependencies]
-indoc = "1"
 
 [lib]
 bench = false
