--- a/aoc-solver/Cargo.toml
+++ b/aoc-solver/Cargo.toml
@@ -3,6 +3,7 @@ name = "aoc-solver"
 version = "0.1.0"
 authors = ["Hans Christian Schmitz"]
 edition = "2021"
+license = "GPL-3.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
