Solve puzzles of 2021 day 11

--- a/aoc-solutions/Cargo.toml
+++ b/aoc-solutions/Cargo.toml
@@ -16,6 +16,7 @@ itertools = "0.10"
 ndarray = "0.15"
 cgmath = "0.18"
 paste = "1"
+array-init = "2"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["real_blackbox"] }
