--- a/aoc-solutions/Cargo.toml
+++ b/aoc-solutions/Cargo.toml
@@ -17,6 +17,7 @@ ndarray = "0.15"
 cgmath = "0.18"
 paste = "1"
 array-init = "2"
+bitvec = "1.0.0-rc1"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["real_blackbox"] }
